# ADSecurityAudit-Rust

./: .gitignore  BACKEND_INTEGRATION_COMPLETE.md  BUGFIX_DATABASE_PRAGMA.md  BUG_FIXES_APPLIED.md  BUG_FIXES_SUMMARY.md  BUG_REPORT.md  BUG_REVIEW_REPORT.md  CODE_REVIEW_COMPLETE.md  DOCUMENTATION_ADDED.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  HIGH_MEDIUM_BUGS_FIXED.md  INTEGRATION_TEST_REPORT.md  README.md  SECURITY_FIXES_APPLIED.md  SETTINGS_FEATURE_COMPLETE.md  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json
.claude/: settings.local.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
components/: ad-connection.tsx  adminsdholder-analysis.tsx  anomaly-detection-panel.tsx  audit-filters.tsx  audit-log-viewer.tsx  cache-statistics-monitor.tsx  credential-prompt.tsx  da-equivalence-audit.tsx  dashboard-view.tsx  delegation-audit.tsx  domain-security-audit.tsx  domain-selector.tsx  domain-trust-audit.tsx  error-boundary.tsx  export-dialog.tsx  gpo-audit.tsx  group-audit.tsx  incident-manager.tsx  krbtgt-management.tsx  performance-monitor.tsx  permissions-audit.tsx  privileged-accounts.tsx  risk-scoring-dashboard.tsx  rotation-countdown.tsx  settings-dialog.tsx  theme-provider.tsx  user-management.tsx
hooks/: use-clipboard.ts  use-toggle-set.ts
lib/: advanced-features-types.ts  export-utils.ts  severity-utils.ts  tauri-api.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ad_client.rs  ad_client_temp.rs  advanced_cache.rs  anomaly_detection.rs  audit_log.rs  auth.rs  common_types.rs  connection_pool.rs  da_equivalence.rs  database.rs  delegation_audit.rs  domain_discovery.rs  domain_security.rs  domain_trust_audit.rs  errors.rs  forest_manager.rs  gpo_audit.rs  group_audit.rs  incident.rs  infrastructure_audit.rs  krbtgt.rs  ldap_helpers.rs  ldap_timeout.rs  ldap_utils.rs  main.rs  parallel_executor.rs  permissions_audit.rs  privileged_accounts.rs  query_cache.rs  risk_scoring.rs  secure_types.rs  security_analysis.rs
src-tauri/tests/: integration_test.rs
tla/: AuditLogSecurity.tla  AuthenticationFlow.cfg  AuthenticationFlow.tla  README.md  (+9 more)
(+2 files in other folders)
