[package]
name = "adsecurityscanner"
version = "0.1.0"
description = "Active Directory Security Scanner - Comprehensive AD Security Auditing Tool"
authors = ["Security Team"]
license = "MIT"
repository = ""
edition = "2021"

[[bin]]
name = "adsecurityscanner"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync", "time", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ldap3 = "0.11"
async-std = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dashmap = "5"           # Concurrent hashmap for caching
parking_lot = "0.12"    # Faster mutexes
rayon = "1.8"           # Data parallelism for CPU-bound work
futures = "0.3"         # Async utilities for parallel futures
deadpool = "0.10"       # Connection pooling
arc-swap = "1.6"        # Lock-free atomic pointer swaps
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory cleanup
secrecy = "0.8"         # Secret handling patterns
thiserror = "1.0"       # Error handling
once_cell = "1.19"      # Lazy static initialization
regex = "1.10"          # Regular expressions
rand = "0.8"            # Random number generation
base64 = "0.21"         # Base64 encoding
rusqlite = { version = "0.30", features = ["bundled"] }  # SQLite database
dirs = "5.0"            # Standard directories
sha2 = "0.10"           # SHA256 hashing for audit log integrity
aes-gcm = "0.10"        # AES-256-GCM encryption
argon2 = "0.5"          # Key derivation
hostname = "0.3"        # Machine hostname for key derivation

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
